--- a/KOA2/src/views/index.html
+++ b/KOA2/src/views/index.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="scripts/jquery-3.0.0.min.js"></script>
 <script type="text/javascript" src="scripts/add.js"></script>
 <script type="text/javascript" src="scripts/system.js"></script>
+<script type="text/javascript" src="scripts/component.js"></script>
 <script type="text/javascript" src="http://cdn.bootcss.com/axios/0.15.2/axios.min.js"></script>
 <script type="text/javascript">
 SystemJS.config({
@@ -29,7 +30,7 @@ function callback($) {
   var f = new $.thumb(0, $('#thumb'));
   f.clickAction();
 }
-SystemJS.import('index-o.js').then(function(m) {
+SystemJS.import('index.js').then(function(m) {
   $.extend({
     thumb: m.default.thumb
   });
