--- a/KOA2/src/views/layout.html
+++ b/KOA2/src/views/layout.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}My Site{% endblock %}</title>
-
-  {% block head %}
-  {% endblock %}
+  {% block head %}{% endblock %}
 </head>
 <body>
   {% block content %}{% endblock %}
+  {% block scripts%} {% endblock %}
 </body>
 </html>
